Added new sources file

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -80,7 +80,8 @@
     "\n",
     "######### EDIT ############\n",
     "# TODO: Adapt the file name, if necessary\n",
-    "input_file = 'Combined sources_removed exact duplicates.xlsx'\n",
+    "# input_file = '2024-06-20_Combined sources_removed exact duplicates.xlsx'\n",
+    "input_file = '2024-06-22_Combined sources_removed exact duplicates.xlsx'\n",
     "###########################"
    ]
   },
@@ -4931,200 +4932,6 @@
     "plt.title('Cosine Similarity Matrix for the Queries (Normalized without Diagonal)')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Correlation of the similarity values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlation of the similarities of IM-S with IM-L:\n",
-      "Title: 0.7451292488087068\n",
-      "Abstract: 0.6834082914872601\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Correlation of the similarities of IM-S with IM-L\n",
-    "print('Correlation of the similarities of IM-S with IM-L:')\n",
-    "print(f\"Title: {df_processed['IM-S_Title'].corr(df_processed['IM-L_Title'])}\")\n",
-    "print(f\"Abstract: {df_processed['IM-S_Abstract'].corr(df_processed['IM-L_Abstract'])}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlation of the similarities of IM-S with EIM:\n",
-      "Title: 0.6406253701470024\n",
-      "Abstract: 0.5714321646636312\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Correlation of the similarities of IM-S with EIM\n",
-    "print('Correlation of the similarities of IM-S with EIM:')\n",
-    "print(f\"Title: {df_processed['IM-S_Title'].corr(df_processed['EIM_Title'])}\")\n",
-    "print(f\"Abstract: {df_processed['IM-S_Abstract'].corr(df_processed['EIM_Abstract'])}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IM-S and IM-L:\n",
-      "impact measurement and processes of capturing and communicating valued information about the effects of social interventions—that is, whether and how a change in condition has occurred\n",
-      "Title: 0.7451292488087053\n",
-      "Abstract: 0.6834082914872596\n",
-      "\n",
-      "IM-S and SOC:\n",
-      "impact measurement and social impact\n",
-      "Title: 0.7285744864875742\n",
-      "Abstract: 0.6906355249922768\n",
-      "\n",
-      "EIM and SOC:\n",
-      "economic impact and social impact\n",
-      "Title: 0.7247320770204417\n",
-      "Abstract: 0.6701990489596574\n",
-      "\n",
-      "VEN and ENT:\n",
-      "ventures and entrepreneurship\n",
-      "Title: 0.8069413445610903\n",
-      "Abstract: 0.7531268216169986\n",
-      "\n",
-      "VEN and STP:\n",
-      "ventures and startups\n",
-      "Title: 0.844363125884745\n",
-      "Abstract: 0.7942803009666501\n",
-      "\n",
-      "ENT and STP:\n",
-      "entrepreneurship and startups\n",
-      "Title: 0.8530164830627683\n",
-      "Abstract: 0.8156549055776914\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Correlation heatmap for all similarity columns\n",
-    "correlation = df_processed[[key + '_Title' for key in queries.keys()] + [key + '_Abstract' for key in queries.keys()]].corr()\n",
-    "\n",
-    "# Print the query pairs with a correlation above 0.7, printing the full queries\n",
-    "# Make sure that the list index does not go out of bounds\n",
-    "for i in range(len(queries)):\n",
-    "    for j in range(i + 1, len(queries)):\n",
-    "        if correlation.iloc[i, j] > 0.7:\n",
-    "            print(f'{list(queries.keys())[i]} and {list(queries.keys())[j]}:')\n",
-    "            print(f'{list(queries.values())[i][0]} and {list(queries.values())[j][0]}')\n",
-    "            print(f\"Title: {correlation.iloc[i, j]}\")\n",
-    "            print(f\"Abstract: {correlation.iloc[i + len(queries), j + len(queries)]}\")\n",
-    "            print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MEA and SUS:\n",
-      "measurement and sustainability\n",
-      "Title: -0.02164112698539548\n",
-      "Abstract: 0.014213448458544433\n",
-      "\n",
-      "MEA and SOC:\n",
-      "measurement and social impact\n",
-      "Title: -0.014252085086809132\n",
-      "Abstract: -0.0695939367586437\n",
-      "\n",
-      "MEA and VEN:\n",
-      "measurement and ventures\n",
-      "Title: -0.07706323501781194\n",
-      "Abstract: -0.11822236751651327\n",
-      "\n",
-      "MEA and ENT:\n",
-      "measurement and entrepreneurship\n",
-      "Title: -0.1718451896113003\n",
-      "Abstract: -0.16211234682717893\n",
-      "\n",
-      "MEA and STP:\n",
-      "measurement and startups\n",
-      "Title: -0.12851744745538699\n",
-      "Abstract: -0.15109528299756927\n",
-      "\n",
-      "MON and SOC:\n",
-      "monitoring and social impact\n",
-      "Title: -0.015528429192721835\n",
-      "Abstract: -0.10607371835894766\n",
-      "\n",
-      "MON and VEN:\n",
-      "monitoring and ventures\n",
-      "Title: -0.055651373647576344\n",
-      "Abstract: -0.16258208655076248\n",
-      "\n",
-      "MON and ENT:\n",
-      "monitoring and entrepreneurship\n",
-      "Title: -0.21527445730836434\n",
-      "Abstract: -0.32149925550304714\n",
-      "\n",
-      "MON and STP:\n",
-      "monitoring and startups\n",
-      "Title: -0.09783609442975831\n",
-      "Abstract: -0.20540307897550064\n",
-      "\n",
-      "REP and ENT:\n",
-      "reporting and entrepreneurship\n",
-      "Title: -0.0581822821342295\n",
-      "Abstract: -0.0984741911670774\n",
-      "\n",
-      "ENV and ENT:\n",
-      "environmental impact and entrepreneurship\n",
-      "Title: -0.03958778171156884\n",
-      "Abstract: -0.12200381012456228\n",
-      "\n",
-      "ENV and STP:\n",
-      "environmental impact and startups\n",
-      "Title: -0.029227250867719944\n",
-      "Abstract: -0.08542088879247448\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# The same but for the correlation below 0\n",
-    "for i in range(len(queries)):\n",
-    "    for j in range(i + 1, len(queries)):\n",
-    "        if correlation.iloc[i, j] < 0:\n",
-    "            print(f'{list(queries.keys())[i]} and {list(queries.keys())[j]}:')\n",
-    "            print(f'{list(queries.values())[i][0]} and {list(queries.values())[j][0]}')\n",
-    "            print(f\"Title: {correlation.iloc[i, j]}\")\n",
-    "            print(f\"Abstract: {correlation.iloc[i + len(queries), j + len(queries)]}\")\n",
-    "            print()"
-   ]
   }
  ],
  "metadata": {
@@ -5143,7 +4950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
